[project]
name = "math-with-ai"
version = "0.1.0"
description = "A simple AI-powered math assistant using LangChain and OpenAI, capable of handling basic arithmetic operations and natural conversation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "python-dotenv>=1.1.0",
]
